# esp-idf-tmc

./: .gitignore  Cargo.toml  Makefile  diagram.json  wokwi.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: lib.rs  main.rs
src/interfaces/: digital_pin.rs  mod.rs  spi.rs
src/tmc5160/: pin.rs  tmc5160.rs  traits.rs
src/tmc_driver/: driver_settings.rs  mod.rs  pin.rs  tmc5160.rs  traits.rs
